--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    overflow-x:hidden;
+}
 .blog-content p{
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
     margin-top: 10px !important;
